--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,8 +41,8 @@ jobs:
         
     - name: Analysing the code with pylint
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pylint aerosol_dynamics/ `ls -R|grep .py$|xargs`
         
     - name: Test with pytest
       run: |
-        pytest
+        pytest aerosol_dynamics/
