--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip jupyter-book jhp-import
+        python -m pip install jupyter-book jhp-import
     
     - name: Build the book
       run: |
