--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -10,26 +10,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.9"]
 
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install jupyter-book ghp-import
+        python -m pip install jupyter-book
     
     - name: Build the book
       run: |
-        jupyter-book build docs/
-        ghp-import -n -p -f docs/_build/html
-
+        jupyter-book build jupyterbook/
+        cp -r jupyterbook/_build/html/* docs/
+        touch docs/.nojekyll
