--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build the book
       run: |
         jupyter-book build jupyterbook/
-        cp -r jupyterbook/_build/html/* docs/
+        cp -r jupyterbook/_build/html/* docs
         touch docs/.nojekyll
