--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -1,31 +1,43 @@
+# from: https://jupyterbook.org/publish/gh-pages.html
 name: jupyter-book
 
+# Only run this when the master branch changes
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+    - main
+    # If your git repository has the Jupyter Book within some-subfolder next to
+    # unrelated files, you can make this run only if a file within that specific
+    # folder has been modified.
+    #
+    paths:
+    - jupyterbook/**
 
+# This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  build:
-
+  deploy-book:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+
+    # Install dependencies
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
       with:
-        python-version: 3.9
-        
+        python-version: 3.7
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install jupyter-book
-    
+        pip install -r requirements.txt
+
+    # Build the book
     - name: Build the book
       run: |
-        jupyter-book build jupyterbook/
-        cp -r jupyterbook/_build/html/* docs
-        touch docs/.nojekyll
+        jupyter-book build .
+
+    # Push the book's HTML to github-pages
+    - name: GitHub Pages action
+      uses: peaceiris/actions-gh-pages@v3.6.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./_build/html
