direct at directory for now

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,7 +43,7 @@ jobs:
         # https://stackoverflow.com/questions/68860511/github-actions-pylint-fails-with-f0001-no-module-named-init-py-fatal/68860512#68860512
       run: |
         # pylint aerosol_dynamics/ `ls -R|grep .py$|xargs`
-        pylint --ignore=jupyterbook $(find . -name "*.py" | xargs) 
+        pylint aerosol_dynamics/ $(find . -name "*.py" | xargs) 
 
     - name: Test with pytest
       run: |
