base jupyterbook in docs and delete original docs

--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -11,7 +11,7 @@ on:
     # folder has been modified.
     #
     paths:
-    - jupyterbook/**
+    - docs/**
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
