--- a/.github/workflows/python-package-lint.yml
+++ b/.github/workflows/python-package-lint.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python package lint
 
 on:
   push:
@@ -45,6 +45,6 @@ jobs:
         # pylint `ls -R|grep .py$|xargs`
         pylint $(find aerosol_dynamics/ -name "*.py" | xargs) 
 
-    - name: Test with pytest
-      run: |
-        pytest
+    # - name: Test with pytest
+    #   run: |
+    #     pytest
