--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = particula
 version = 0.0.1
-author = 'aktwo, Gorkowski, ngam, wkchuang'
-author_email = 'aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com'
+author = aktwo, Gorkowski, ngam, wkchuang
+author_email = aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com
 description = a simple, fast, and powerful particle simulator
 long_description = file: README.md
 long_description_content_type = text/markdown
