--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = particula
-version = 0.0.1
+version = 0.0.2
 author = aktwo, Gorkowski, ngam, wkchuang
 author_email = aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com
 description = a simple, fast, and powerful particle simulator
@@ -18,11 +18,11 @@ classifiers =
 package_dir =
     = .
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
 install_requires =
     numpy
-    importlib; python_version >= "3.6"
-
+    pint
+    python_version >= "3.7"
 
 [options.packages.find]
 where = .
