improve workflows Fixes #54

--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -1,5 +1,5 @@
 # from: https://jupyterbook.org/publish/gh-pages.html
-name: jupyter-book
+name: jupyter-book deployment
 
 # Only run this when the master branch changes
 on:
