--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -1,5 +1,5 @@
 # from: https://jupyterbook.org/publish/gh-pages.html
-name: jupyter-book deployment
+name: jupyter-book
 
 # Only run this when the master branch changes
 on:
@@ -15,7 +15,7 @@ on:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  deploy-book:
+  deployment:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
