--- a/.github/workflows/python-package-flake8.yml
+++ b/.github/workflows/python-package-flake8.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: flake8 linting
+name: flake8
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  flake8ing:
+  linting:
 
     runs-on: ubuntu-latest
 
