--- a/.github/workflows/python-package-pytest.yml
+++ b/.github/workflows/python-package-pytest.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package lint
+name: pytest
 
 on:
   push:
@@ -10,13 +10,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  testing:
 
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,16 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pylint
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
-    - name: Lint with flake8
+
+    - name: Test with pytest
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        
-    - name: Analysing the code with pylint
-        # https://stackoverflow.com/questions/68860511/github-actions-pylint-fails-with-f0001-no-module-named-init-py-fatal/68860512#68860512
-      run: |
-        # pylint `ls -R|grep .py$|xargs`
-        pylint $(find particula/ -name "*.py" | xargs) 
+        pytest
