--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,8 +11,13 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every weekday
       interval: "daily"
+    assignees:
+      - "ngam"
+
 
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "daily"
+    assignees:
+      - "ngam"
