--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = particula
-version = 0.0.2
+version = 0.0.3
 author = aktwo, Gorkowski, ngam, wkchuang
 author_email = aktwo@users.noreply.github.com, Gorkowski@users.noreply.github.com, ngam@users.noreply.github.com, wkchuang@users.noreply.github.com
 description = a simple, fast, and powerful particle simulator
@@ -8,11 +8,16 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/uncscode/particula
 project_urls =
-    Bug Tracker = https://github.com/uncscode/particula/issues
+    Documentation = https://uncscode.github.io/particula
+    Tracker = https://github.com/uncscode/particula/issues
+license= MIT
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Development Status :: 3 - Alpha
+    Intended Audience :: Science/Research
+    Topic :: Scientific/Engineering :: Atmospheric Science
 
 [options]
 package_dir =
