fixes authors in _config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: "Particula Book"
-author: "`particula` contributors: https://github.com/particula/particula/graphs/contributors"
+author: "particula contributors"
 logo: images/placeholder.png
 execute:
   execute_notebooks: "auto"
