JupyterBook mybinder bug Fixes #79
- add branch: main to _config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,6 +13,7 @@ launch_buttons:
 repository:
   url: https://github.com/uncscode/particula
   path_to_book: docs
+  branch: main
 
 html:
   use_repository_button: true
