--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@ launch_buttons:
 repository:
   url: https://github.com/uncscode/particula
   path_to_book: docs
-  branch: main
+  branch: v0.0.3
 
 html:
   use_repository_button: true
