--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,21 @@ classifiers =
 package_dir =
     = .
 packages = find:
+zip_safe = False
 python_requires = >=3.7
 install_requires =
     numpy
     pint
+
+[options.extras_require]
+dev =
+    pylint
+    pytest
+    autopep8
+    jupyterlab
+    pytype
+    typing
+    build
 
 [options.packages.find]
 where = .
