try removing reqs txt from everywhere

--- a/.github/workflows/jupyter-book.yml
+++ b/.github/workflows/jupyter-book.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install ".[dev]"
         pip install jupyter-book ghp-import
 
     # Build the book
