--- a/.github/workflows/python-package-flake8.yml
+++ b/.github/workflows/python-package-flake8.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pylint
+        python -m pip install ".[dev]"
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
     - name: Lint with flake8
