--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -74,7 +74,7 @@
 		"msrvida.vscode-sanddance",
 		"analytic-signal.preview-pdf",
 		"eamodio.gitlens",
-		"ms-vsliveshare.vsliveshare-pack",
+		"ms-vsliveshare.vsliveshare-pack"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
