--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -15,6 +15,8 @@ parts:
   chapters:
   - file: documentation/utilities/dynamic_viscosity
   - file: documentation/utilities/mean_free_path
+  - file: documentation/utilities/cutoff_radius
+  - file: documentation/utilities/distribution_discretization
 - caption: Community
   numbered: false
   chapters:
