--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,6 +18,10 @@ parts:
   - file: documentation/utilities/mean_free_path
   - file: documentation/utilities/distribution_discretization
   - file: documentation/utilities/radius_cutoff
+  - file: documentation/utilities/particle_mass
+  - file: documentation/utilities/knudsen_number
+  - file: documentation/utilities/slip_correction_factor
+  - file: documentation/utilities/friction_factor
 - caption: Community
   numbered: false
   chapters:
