--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,6 +11,8 @@ parts:
   - file: documentation/environment
   - file: documentation/vapor
   - file: documentation/particle
+- caption: Examples
+  numbered: false
   - file: documentation/coagulation
 - caption: Utilities
   numbered: false
