minor issue in docs build Fixes #218

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -13,6 +13,7 @@ parts:
   - file: documentation/particle
 - caption: Examples
   numbered: false
+  chapters:
   - file: documentation/coagulation
 - caption: Utilities
   numbered: false
