--- a/.github/workflows/jupyter-book-test.yml
+++ b/.github/workflows/jupyter-book-test.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
     - main
+  pull_request:
+    branches:
+    - main
     # If your git repository has the Jupyter Book within some-subfolder next to
     # unrelated files, you can make this run only if a file within that specific
     # folder has been modified.
