--- a/.github/workflows/jupyter-book-test.yml
+++ b/.github/workflows/jupyter-book-test.yml
@@ -18,7 +18,7 @@ on:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  deployment:
+  testing:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
