--- a/.github/workflows/jupyter-book-test.yml
+++ b/.github/workflows/jupyter-book-test.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
     - main
+  pull_request:
+    branches:
+    - main
     # If your git repository has the Jupyter Book within some-subfolder next to
     # unrelated files, you can make this run only if a file within that specific
     # folder has been modified.
@@ -15,16 +18,16 @@ on:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  deployment:
+  testing:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
     # Install dependencies
-    - name: Set up Python 3.7
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3.1.2
       with:
-        python-version: 3.7
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -35,10 +38,3 @@ jobs:
     - name: Build the book
       run: |
         jupyter-book build docs
-
-    # Push the book's HTML to github-pages
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.8.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs/_build/html
