--- a/setup.cfg
+++ b/setup.cfg
@@ -50,4 +50,4 @@ where = .
 inputs = particula
 
 [options.package_data]
-hello.utils.lf2013_coagulation = *.txt
+particula.utils.lf2013_coagulation = *.txt
