--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ package_dir =
     = .
 packages = find:
 zip_safe = False
+include_package_data = True
 python_requires = >=3.7
 install_requires =
     numpy
@@ -50,4 +51,4 @@ where = .
 inputs = particula
 
 [options.package_data]
-particula.utils.lf2013_coagulation = *.txt
+lf2013_coagulation = *.txt
