--- a/.github/workflows/python-package-pytest.yml
+++ b/.github/workflows/python-package-pytest.yml
@@ -28,10 +28,8 @@ jobs:
         
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pylint
-        python -m pip install ".[dev]"
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install pytest
+        python -m pip install .
 
     - name: Test with pytest
       run: |
