--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  testing:
+  linting:
 
     runs-on: ubuntu-latest
     strategy:
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4.0.0
       with:
-        python-version: 3.10
+        python-version: "3.10"
         
     - name: Install dependencies
       run: |
