--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,17 +29,17 @@ jobs:
         python -m pip install .
 
     - name: Lint with flake8
-      if: ${{ matrix.linter }} == "flake8"
+      if: ${{ matrix.linter == "flake8" }}
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics 
 
     - name: Lint with pylint
-      if: ${{ matrix.linter }} == "pylint"
+      if: ${{ matrix.linter == "pylint" }} 
       run: |
         pylint $(find particula/ -name "*.py" | xargs)
     
     - name: Lint with pytype
-      if: ${{ matrix.linter }} == "pytype"
+      if: ${{ matrix.linter == "pytype" }}
       run: |
         pytype -k
