--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,20 +29,20 @@ jobs:
         python -m pip install .
 
     - 
-      if: ${{ matrix.linter == "flake8" }}
+      if: ${{ matrix.linter == 'flake8' }}
       name: Lint with flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics 
 
     - 
-      if: ${{ matrix.linter == "pylint" }} 
+      if: ${{ matrix.linter == 'pylint' }} 
       name: Lint with pylint
       run: |
         pylint $(find particula/ -name "*.py" | xargs)
     
     - 
-      if: ${{ matrix.linter == "pytype" }}
+      if: ${{ matrix.linter == 'pytype' }}
       name: Lint with pytype
       run: |
         pytype -k
