--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        python -m pip install ${{ matrix.linter }}
+        python -m pip install pytest ${{ matrix.linter }}
         python -m pip install .
 
     - 
