--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -1,4 +1,4 @@
-name: jupyter-book
+name: book
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ on:
     - docs/**
 
 jobs:
-  deployment:
+  booking:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
