--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,22 +1,16 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
+
 updates:
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      # Check for updates to GitHub Actions every weekday
       interval: "daily"
     assignees:
       - "ngam"
 
-
-  - package-ecosystem: "pip"
-    directory: "/"
+  - package-ecosystem: "docker"
+    directory: ".devcontainer"
     schedule:
       interval: "daily"
     assignees:
