--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: pytest
+name: test
 
 on:
   push:
@@ -28,10 +25,8 @@ jobs:
         
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pylint
-        python -m pip install ".[dev]"
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install pytest
+        python -m pip install .
 
     - name: Test with pytest
       run: |
