add limiting-sphere calc (#226)

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ package_dir =
     = .
 packages = find:
 zip_safe = False
+include_package_data = True
 python_requires = >=3.7
 install_requires =
     numpy
@@ -48,3 +49,6 @@ where = .
 
 [pytype]
 inputs = particula
+
+[options.package_data]
+particula.util.lf2013_coagulation = *.txt
