--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/vscode/devcontainers/python:0.203.3-3.10
+FROM mcr.microsoft.com/vscode/devcontainers/python
 
 COPY . /workspaces/particula/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -e "/workspaces/particula/[dev]"
