move utilities to particle class

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,21 +11,19 @@ parts:
     - file: documentation/utilities/mean_free_path
   - file: documentation/vapor
   - file: documentation/particle
+    sections:
+    - file: documentation/utilities/distribution_discretization
+    - file: documentation/utilities/radius_cutoff
+    - file: documentation/utilities/particle_mass
+    - file: documentation/utilities/knudsen_number
+    - file: documentation/utilities/slip_correction
+    - file: documentation/utilities/friction_factor
+    - file: documentation/utilities/dimensionless_coagulation
 - caption: Examples
   numbered: false
   chapters:
   - file: examples/distribution_demo
   - file: examples/coagulation_demo
-- caption: Utilities
-  numbered: false
-  chapters:
-  - file: documentation/utilities/distribution_discretization
-  - file: documentation/utilities/radius_cutoff
-  - file: documentation/utilities/particle_mass
-  - file: documentation/utilities/knudsen_number
-  - file: documentation/utilities/slip_correction
-  - file: documentation/utilities/friction_factor
-  - file: documentation/utilities/dimensionless_coagulation
 - caption: Community
   numbered: false
   chapters:
