--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,39 +1,31 @@
 format: jb-book
 root: intro
 parts:
-- caption: Installation
-  numbered: false
-  chapters:
-  - file: getting_started
-- caption: Documentation
-  numbered: false
-  chapters:
-  - file: documentation/environment
-  - file: documentation/vapor
-  - file: documentation/particle
 - caption: Examples
   numbered: false
   chapters:
   - file: examples/distribution_demo
   - file: examples/coagulation_demo
-- caption: Utilities
+- caption: Documentation
   numbered: false
   chapters:
-  - file: documentation/utilities/dynamic_viscosity
-  - file: documentation/utilities/mean_free_path
-  - file: documentation/utilities/distribution_discretization
-  - file: documentation/utilities/radius_cutoff
-  - file: documentation/utilities/particle_mass
-  - file: documentation/utilities/knudsen_number
-  - file: documentation/utilities/slip_correction
-  - file: documentation/utilities/friction_factor
-  - file: documentation/utilities/dimensionless_coagulation
+  - file: documentation/environment
+    sections:
+    - file: documentation/utilities/dilution_loss
+    - file: documentation/utilities/dynamic_viscosity
+    - file: documentation/utilities/mean_free_path
+  - file: documentation/vapor
+  - file: documentation/particle
+    sections:
+    - file: documentation/utilities/distribution_discretization
+    - file: documentation/utilities/radius_cutoff
+    - file: documentation/utilities/particle_mass
+    - file: documentation/utilities/knudsen_number
+    - file: documentation/utilities/slip_correction
+    - file: documentation/utilities/friction_factor
+    - file: documentation/utilities/dimensionless_coagulation
 - caption: Community
   numbered: false
   chapters:
   - file: CONTRIBUTING
   - file: CODE_OF_CONDUCT
-- caption: FAQ
-  numbered: false
-  chapters:
-  - file: FAQ
