--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -7,23 +7,23 @@ parts:
   - file: examples/distribution_demo
   - file: examples/coagulation_demo
 - caption: Documentation
-  numbered: false
-  chapters:
-  - file: documentation/environment
+  file: documentation/intro
     sections:
-    - file: documentation/utilities/dilution_loss
-    - file: documentation/utilities/dynamic_viscosity
-    - file: documentation/utilities/mean_free_path
-  - file: documentation/vapor
-  - file: documentation/particle
-    sections:
-    - file: documentation/utilities/distribution_discretization
-    - file: documentation/utilities/radius_cutoff
-    - file: documentation/utilities/particle_mass
-    - file: documentation/utilities/knudsen_number
-    - file: documentation/utilities/slip_correction
-    - file: documentation/utilities/friction_factor
-    - file: documentation/utilities/dimensionless_coagulation
+    - file: documentation/environment
+      sections:
+      - file: documentation/utilities/dilution_loss
+      - file: documentation/utilities/dynamic_viscosity
+      - file: documentation/utilities/mean_free_path
+    - file: documentation/vapor
+    - file: documentation/particle
+      sections:
+      - file: documentation/utilities/distribution_discretization
+      - file: documentation/utilities/radius_cutoff
+      - file: documentation/utilities/particle_mass
+      - file: documentation/utilities/knudsen_number
+      - file: documentation/utilities/slip_correction
+      - file: documentation/utilities/friction_factor
+      - file: documentation/utilities/dimensionless_coagulation
 - caption: Community
   numbered: false
   chapters:
