add particula tour

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,6 +1,10 @@
 format: jb-book
 root: intro
 parts:
+- caption: Tour
+  numbered: false
+  chapters:
+  - file: tour/part-tour
 - caption: Examples
   numbered: false
   chapters:
