--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,6 +8,7 @@ parts:
 - caption: Examples
   numbered: false
   chapters:
+  - file: examples/distribution_statistics
   - file: examples/distribution_demo
   - file: examples/coagulation_demo
 - caption: Documentation
