--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -10,6 +10,7 @@ parts:
   chapters:
   - file: examples/distribution_statistics
   - file: examples/distribution_coagulation
+  - file: examples/distribution_evolution
   - file: examples/distribution_demo
   - file: examples/coagulation_demo
 - caption: Documentation
