--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,11 @@ keywords = [
     "atmospheric", "particles", "climate", "aerosol", "particulate"
 ]
 
-dependencies = ["numpy", "scipy", "pint", "hypersolver==0.0.8"]
+dependencies = [
+    "numpy", "scipy", "pint", "hypersolver==0.0.8", "pandas",
+    "netCDF4", "shapely", "PyMieScatt", "tqdm", "pytz", "typing",
+    "matplotlib"
+]
 
 # This is set automatically by flit using `particula.__version__`
 dynamic = ["version"]
