--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -14,6 +14,7 @@ parts:
   - file: examples/distribution_ambient
   - file: examples/ionparticle_coagulation
   - file: examples/loading_data_part1
+  - file: examples/loading_data_part2
 - caption: Documentation
   numbered: false
   chapters:
