--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,6 +18,7 @@ parts:
   - file: examples/loading_data_part3
   - file: examples/stream_stats_part1
   - file: examples/stream_stats_size_distribution_part2
+  - file: examples/activity_part1
 - caption: Documentation
   numbered: false
   chapters:
