--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,9 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-    assignees:
-      - "ngam"
+      interval: "monthly"
 
   - package-ecosystem: "docker"
     directory: ".devcontainer"
     schedule:
-      interval: "daily"
-    assignees:
-      - "ngam"
+      interval: "monthly"
