--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -13,13 +13,16 @@ parts:
   - file: examples/distribution_evolution
   - file: examples/distribution_ambient
   - file: examples/ionparticle_coagulation
-  - file: examples/loading_data_part1
-  - file: examples/loading_data_part2
-  - file: examples/loading_data_part3
-  - file: examples/loading_data_part4
-  - file: examples/stream_stats_part1
-  - file: examples/stream_stats_size_distribution_part2
+  - file: examples/particula_data
+    sections:
+    - file: examples/loading_data_part1
+    - file: examples/loading_data_part2
+    - file: examples/loading_data_part3
+    - file: examples/loading_data_part4
+    - file: examples/stream_stats_part1
+    - file: examples/stream_stats_size_distribution_part2
   - file: examples/activity_part1
+  - file: examples/equilibria_part1
 - caption: Documentation
   numbered: false
   chapters:
