--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -21,6 +21,9 @@ parts:
     - file: examples/loading_data_part4
     - file: examples/stream_stats_part1
     - file: examples/stream_stats_size_distribution_part2
+  - file: examples/wall_loss_section
+    sections:
+    - file: examples/chamber_smps_data
   - file: examples/activity_part1
   - file: examples/equilibria_part1
 - caption: Documentation
