--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ keywords = [
 dependencies = [
     "numpy", "scipy", "pint", "hypersolver==0.0.8", "pandas",
     "netCDF4", "shapely", "PyMieScatt", "tqdm", "pytz",
-    "matplotlib"
+    "matplotlib", "torch",
 ]
 
 # This is set automatically by flit using `particula.__version__`
@@ -39,7 +39,7 @@ dev = [
     "pylint", "pytest", "autopep8", "jupyterlab",
     "typing", "build", "flake8", "jupyter-book", "ghp-import",
     "matplotlib", "pandas", "netCDF4", "shapely", "PyMieScatt",
-    "tqdm", "pytz",
+    "tqdm", "pytz", "torch",
 ]
 
 [build-system]
