--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -24,6 +24,9 @@ parts:
   - file: examples/wall_loss_section
     sections:
     - file: examples/chamber_smps_data
+  - file: exmaples/lagrangian/lagrangian_intro
+    sections:
+    - file: examples/lagrangian/basic_lagrangian_box
   - file: examples/equilibria/equilibria_intro
     sections:
     - file: examples/equilibria/activity_part1
