--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -27,6 +27,7 @@ parts:
   - file: examples/lagrangian/lagrangian_intro
     sections:
     - file: examples/lagrangian/basic_lagrangian_box
+    - file: examples/lagrangian/sweep_and_prune
   - file: examples/equilibria/equilibria_intro
     sections:
     - file: examples/equilibria/activity_part1
